splash screen and apps logo/name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ProjectICT</string>
+    <string name="app_name">MengTracking</string>
     <string name="title_activity_driver_maps">DriverMapsActivity</string>
     <string name="title_activity_maps">MapsActivity</string>
 </resources>
